--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "mon-chat",
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxt/eslint": "1.4.1",
@@ -8,7 +8,7 @@
     "@nuxt/image": "1.10.0",
     "@nuxt/ui": "^2.21.1",
     "@nuxtjs/supabase": "1.5.2",
-    "@types/bun": "^1.2.17",
+    "@types/node": "^24.0.7",
     "eslint": "^9.0.0",
     "nuxt": "^3.16.0",
     "vue": "latest"
