--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@nuxt/image": "1.10.0",
     "@nuxt/ui": "^2.21.1",
     "@nuxtjs/supabase": "1.5.2",
+    "@types/bun": "^1.2.17",
     "@types/node": "^24.0.7",
     "eslint": "^9.0.0",
     "nuxt": "^3.16.0",
